--- a/Myntra_Clone/css/index.css
+++ b/Myntra_Clone/css/index.css
@@ -89,10 +89,35 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-decoration: none;
+  margin-top: 17px;
+ }
+ a.bag:link{
+  color: rgb(0, 0, 0);
+ }
+ a.bag:visited{
+  color: black;
  }
  #bag-pic{
   text-align: center;
  }
+ .bag-count{
+    background-color: #f16565;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 18px;
+    padding: 0 6px;
+    height: 18px;
+    position: relative;
+    border-radius: 50%;
+    font-size: 12px;
+    color: #fff;
+    left: 13px;
+    top: -44px;
+    font-weight: 700;
+    cursor: pointer;
+ }
+ 
 
  .onlineshopping{
   display: flex;
@@ -114,4 +139,73 @@ header{
   font-size: 15px;
   text-align: end;
   padding: 15px;
+ }
+
+
+ .item_container{
+   margin:20px;
+ }
+ .rating{
+  font-size: 12px;
+    font-weight: 700;
+ }
+ .company_name{
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1;
+  color: #282c3f;
+  padding-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+ }
+ .item_name{
+  color: #535766;
+    font-size: 14px;
+    line-height: 1;
+    margin-bottom: 0;
+    margin-top: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: 400;
+    display: block;
+    padding-top: 2px;
+    width: 210px;
+ }
+ .price{
+  margin: 10px 0 6px;
+  font-weight: 700;
+ }
+ .current_price{
+  font-size: 14px;
+  font-weight: 700;
+  color: #282c3f;
+ }
+ .original_price{
+  text-decoration: line-through;
+  color: #7e818c;
+  font-weight: 400;
+  margin-left: 5px;
+  font-size: 12px;
+ }
+ .discount{
+  color: #ff905a;
+  font-weight: 400;
+  font-size: 12px;
+  margin-left: 5px;
+ }
+ .bag_button{
+   width: 200px;
+   height: 30px;
+   border: none ;
+   border-radius: 10px;
+   font-weight: 700;
+   background-color: rgb(87, 236, 87);
+   cursor: pointer;
+ }
+ .items_container{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
  }
